--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -3,7 +3,7 @@
 	<li class="{% active '[a-z]+/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
 	<li class="{% active '[a-z]+/train/' %}"><a href="{% url 'training:index' %}">{% trans "Train" %}</a></li>
 	<li><a href="{% active '^archives/' %}">{% trans "Archives" %}</a></li>
-	<li class="{% active '[a-z]+/forum/' %}"><a href="/forum">{% trans "Forums" %}</a></li>
+	<li class="{% active '[a-z]+/forum/' %}"><a href="{% url 'forum:home' %}">{% trans "Forums" %}</a></li>
 	<li class="sep"><a>&nbsp;</a></li>
 	{% if user.is_authenticated %}
 	<li class="dropdown">
