Misc: fix alert icon CSS; remove legacy fill_db command

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -409,6 +409,11 @@ footer .legal {
  * Misc
  */
 
+.alert > .fa {
+	display: table-cell;
+	vertical-align: middle;
+}
+
 .alert div, .alert span {
 	padding-left: 8px;
 	display: table-cell;
