--- a/prologin/forum/templates/forum/threadList.html
+++ b/prologin/forum/templates/forum/threadList.html
@@ -1,4 +1,4 @@
-{% extends "prologin/base.html" %}
+{% extends "forum/base.html" %}
 {% load i18n %}
 {% block title %}{% trans "Forums" %} - {{cat_name}}{% endblock %}
 
@@ -10,12 +10,25 @@
 	<br>
 
 	<ul>
+	
+		{% for tread in pin %}
+			<li>
+				<div class="pin_thread">
+					<h3><a href="{{tread.slug}}/0">{{tread.name}}</a></h3>
+					<p>{% blocktrans with by=tread.created_by on=tread.created_on|date:"d F Y G:i" %}Posted by : {{by}}, the {{on}}{% endblocktrans %}</p>
+					<div class="nb_stuff">
+						<p>{% blocktrans with post_nb=nb_post on=tread.last_edited_on|date:"d F Y G:i" by=tread.last_edited_by %}Posts : {{post_nb}}, Last post by : {{by}}, the {{on}}{% endblocktrans %}</p>
+					</div>
+				</div>
+			</li>
+		{% endfor %}
+		
 		{% for tread in threads %}
 			<li>
-				<h3><a href="{{tread.slug}}">{{tread.name}}</a></h3>
+				<h3><a href="{{tread.slug}}/0">{{tread.name}}</a></h3>
 				<p>{% blocktrans with by=tread.created_by on=tread.created_on|date:"d F Y G:i" %}Posted by : {{by}}, the {{on}}{% endblocktrans %}</p>
 				<div class="nb_stuff">
-					<p>{% blocktrans with post_nb=tread.nb_post on=tread.last_edited_on|date:"d F Y G:i" by=tread.last_edited_by %}Posts : {{post_nb}}, Last post by : {{by}}, the {{on}}{% endblocktrans %}</p>
+					<p>{% blocktrans with post_nb=nb_post on=tread.last_edited_on|date:"d F Y G:i" by=tread.last_edited_by %}Posts : {{post_nb}}, Last post by : {{by}}, the {{on}}{% endblocktrans %}</p>
 				</div>
 			</li>
 			{% empty %} 
