--- a/prologin/forum/templates/forum/base.html
+++ b/prologin/forum/templates/forum/base.html
@@ -1,4 +1,4 @@
-{% load static i18n utils %}
+﻿{% load static i18n utils %}
 {% load django_bootstrap_breadcrumbs %}
 {% get_current_language as LANGUAGE_CODE %}
 <!doctype html>
@@ -16,6 +16,8 @@
 
 	{# Custom #}
 	<link rel="stylesheet" type="text/css" href="{% static 'css/prologin.css' %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/forum.css' %}"/>
+
 
 	<meta name="description" content="{% block "meta_descr" %}{% endblock %}">
 
