--- a/prologin/forum/templates/forum/home.html
+++ b/prologin/forum/templates/forum/home.html
@@ -1,4 +1,4 @@
-{% extends "prologin/base.html" %}
+{% extends "forum/base.html" %}
 {% load i18n %}
 {% block title %}{% trans "Forums" %}{% endblock %}
 
