--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -49,7 +49,7 @@
 				{% get_language_info_list for LANGUAGES as languages %}
 				{% for language in languages %}
 					<option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
-							selected="selected"{% endif %}>{{ language.name_local }}</option>
+							selected="selected"{% endif %}>{{ language.name_local.title }}</option>
 				{% endfor %}
 			</select>
 			<noscript><input type="submit" class="btn btn-default" value="{% trans "Apply" %}"/></noscript>
