--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -3,8 +3,9 @@
 	<div class="col-xs-6 col-md-4">
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
-			<li><a href="{% url 'pages:about-organization' %}">{% trans "The organization" %}</a></li>
-			<li><a href="{% url 'pages:about-organization' %}#contact">{% trans "Contact us" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}"><i class="fa fa-cube fa-centered"></i> {% trans "The organization" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}#contact"><i class="fa fa-envelope fa-centered"></i> {% trans "Contact us" %}</a></li>
+			<li><a href="#TODO"><i class="fa fa-question fa-centered"></i> {% trans "How can I join?" %}</a></li>
 		</ul>
 		<h3>{% trans "More" %}</h3>
 		<ul class="nav">
