about: contest: fix translation, remove TODO <p>

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -95,6 +95,6 @@ duration of the finale. You only have to handle the cost of transportation.{% en
 	{# un-hack: restore content_super container #}
 	<div class="container">
 
-	<p>Foobar about training and archives. Or maybe put that at the top.</p>
+    {# TODO: Foobar about training and archives. Or maybe put that at the top.</p> #}
 
 {% endblock content %}
