--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -2,8 +2,10 @@
 <ul class="nav navbar-nav pull-right">
 	<li class="{% active '[a-z]+/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
 	<li class="{% active '[a-z]+/train/' %}"><a href="{% url 'training:index' %}">{% trans "Train" %}</a></li>
+    {% comment TODO %}
 	<li><a href="{% active '^archives/' %}">{% trans "Archives" %}</a></li>
 	<li><a href="{% active '^forum/' %}">{% trans "Forums" %}</a></li>
+    {% endcomment %}
 	<li class="sep"><a>&nbsp;</a></li>
 	{% if user.is_authenticated %}
 	<li class="dropdown">
